--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -333,11 +333,11 @@ texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 custom_template/release=""
 custom_template/debug=""
-application/icon=""
-application/file_version=""
-application/product_version=""
-application/company_name=""
-application/product_name=""
-application/file_description=""
-application/copyright=""
-application/trademarks=""
+application/icon="res://icon.ico"
+application/file_version="1.0"
+application/product_version="1.0"
+application/company_name="pclgamedev"
+application/product_name="Punk Robot"
+application/file_description="One Robot against the Terrors of space!"
+application/copyright="MIT"
+application/trademarks="Punk Robot"
